  * add information about "upgraded" packages to the history pane 
    (thanks to seb128 for the suggestion)
  * merged lp:~mvo/software-center/new-apps-test1 and
    lp:~mmcg069/software-center/catview-conform-w-spec, thanks
    to Matthew McGowan
  * merged lp:~mvo/software-center/update-from-var-lib-apt-lists
    to support meta-data in deb822 format in /var/lib/apt/lists

 -- Gary Lasker <gary.lasker@canonical.com>  Tue, 29 Jun 2010 01:22:18 -0400

software-center (2.1.3) maverick; urgency=low

  * softwarecenter/view/appview.py,
    softwarecenter/view/availablepane.py,
    softwarecenter/view/channelpane.py:
    - fix visual glitch when updating a list view that contains
      a large number of items (LP: #592296)
  * po/POTFILES.in:
    - update to current set of modules
  * software-center,
    softwarecenter/app.py,
    data/ui/SoftwareCenter.ui:
    - only show login menu if --enable-lp at startup as this
      feature is still in development (LP: #592616)
  * softwarecenter/app.py:
    - set nav history menu items insensitive rather than
      hide them (LP: #594273) 
  * merged lp:~mmcg069/software-center/catview2-take3, further
    refinement of the category screen courtesy Matthew McGowan,
    many thanks! 
  * softwarecenter/view/availablepane.py:
    - disable hide non-apps for the Featured Applications
      category (LP: #594817) 

 -- Gary Lasker <gary.lasker@canonical.com>  Thu, 17 Jun 2010 10:23:15 -0400

software-center (2.1.2) maverick; urgency=low

  [ Gary Lasker ]
  * softwarecenter/view/viewswitcher.py:
    - only reselect a channel node when a model is available
      (LP: #578497)
  * fix "List view forgets selected row" regression (LP: #584969)
  * softwarecenter/view/availablepane.py:
    - fix broken searches
  * data/ui/SoftwareCenter.ui,
    softwarecenter/app.py,
    softwarecenter/view/availablepane.py,
    softwarecenter/view/navhistory.py:
    - bit of navhistory code housekeeping